Fixed Gap issue in Menu

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -32,6 +32,6 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 100px;
-    margin: 0%;
+    margin: 100px 0 0;
     padding: 0%;
 }
